--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "3d-block-game-generator",
   "private": true,
   "version": "0.0.0",
+  "homepage": "/3d-block-game-generator",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
     "dom-to-svg": "^0.12.2",
+    "history": "^5.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -19,6 +23,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
